@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.545 2008/11/11 18:27:42 janert Exp $
+C RCS $Id: gnuplot.doc,v 1.546 2008/11/27 17:54:18 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -4326,6 +4326,7 @@ Ffigure_mapcontours
  generally should not be used for binary data.  There are keywords in
  <binary list> that control this.
 5 array
+?binary array
 ?binary general array
  Describes the sampling array dimensions associated with the binary file.
  The coordinates will be generated by gnuplot.  A number must be specified
